app/assets/stylesheets/application.css
/*
 * This is a manifest file that'll be compiled into application.css, which will include all the files
 * listed below.
 *
 * Any CSS and SCSS file within this directory, lib/assets/stylesheets, vendor/assets/stylesheets,
 * or any plugin's vendor/assets/stylesheets directory can be referenced here using a relative path.
 *
 * You're free to add application-wide styles to this file and they'll appear at the bottom of the
 * compiled file so the styles you add here take precedence over styles defined in any other CSS/SCSS
 * files in this directory. Styles in this file should be added after the last require_* statement.
 * It is generally better to create a new file per style scope.
 *
 *= require_tree .
 *= require_self
 *= require material.min
 *= require getmdl-select.min
 *= require alertify.core
 *= require alertify.default

 */
 body{
   background-size: cover;
   background-attachment: fixed;
   margin: 0;

 }
 table, td, th {
   width: 2%;
 }
 table {
   margin-bottom: 80px;
 }

#add_button{
  margin: 0px 0px 0px 100px;
}


/* visited link */
a:link, a:visited, a:hover, a:active{
    color: teal;
    text-decoration: none;
    display: inline-block;
    background-color: transparent;
}

#form_button{
  float:center;
  width: auto;
  display:inline-block;
  margin-bottom: 20px
}

#buttons_div {
  text-align: center;
}

.bottom-right-fixed {
  position:fixed;
  right: 20px;
  bottom: 20px;
  z-index: 9;
}

#remember_me{
  text-align: center;
  margin-right: 0.5em;
  width: 11em;
}

